--- a/deldash.html
+++ b/deldash.html
@@ -16,7 +16,7 @@
             background-color: #f4f4f4;
             padding: 0px;
             text-align: center;
-            background-image: url('https://img.freepik.com/premium-photo/set-diverse-medical-items-means-prevention-personal-hygiene-treatment-symptoms-coronavirus_164638-7153.jpg'); 
+            background-image: url(''); 
             background-size: cover; 
             background-position: center; 
             background-repeat: no-repeat;
