--- a/stock.html
+++ b/stock.html
@@ -78,48 +78,56 @@
             <tr>
                 <th>Drug Name</th>
                 <th>Stock Quantity</th>
+                <th>Date of Arrival</th>
                 <th>Expiry Date</th>
                 <th>Status</th>
             </tr>
             <tr>
                 <td>Drug A</td>
                 <td>150</td>
+                <td>15th September 2024</td>
                 <td>30th September 2024</td>
                 <td><span class="low-stock">Low Stock</span></td>
             </tr>
             <tr>
                 <td>Drug B</td>
                 <td>500</td>
+                <td>5th October 2024</td>
                 <td>15th November 2024</td>
                 <td><span class="in-stock">In Stock</span></td>
             </tr>
             <tr>
                 <td>Drug C</td>
                 <td>75</td>
+                <td>20th September 2024</td>
                 <td>1st October 2024</td>
                 <td><span class="low-stock">Low Stock</span></td>
             </tr>
             <tr>
                 <td>Drug D</td>
                 <td>300</td>
+                <td>1st November 2024</td>
                 <td>12th December 2024</td>
                 <td><span class="in-stock">In Stock</span></td>
             </tr>
             <tr>
                 <td>Drug E</td>
                 <td>200</td>
+                <td>10th December 2024</td>
                 <td>25th January 2025</td>
                 <td><span class="in-stock">In Stock</span></td>
             </tr>
             <tr>
                 <td>Drug F</td>
                 <td>50</td>
+                <td>5th February 2025</td>
                 <td>18th February 2025</td>
                 <td><span class="low-stock">Low Stock</span></td>
             </tr>
             <tr>
                 <td>Drug G</td>
                 <td>400</td>
+                <td>25th February 2025</td>
                 <td>20th March 2025</td>
                 <td><span class="in-stock">In Stock</span></td>
             </tr>
