--- a/test.html
+++ b/test.html
@@ -122,6 +122,7 @@
                             <th>Location</th>
                             <th>Contact</th>
                             <th>Supplies Sent To</th>
+                            <th>Supplied Date</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -131,6 +132,7 @@
                             <td>City A</td>
                             <td>contact@xyzpharma.com</td>
                             <td>Central Warehouse, North Warehouse</td>
+                            <td>2024-08-01</td>
                         </tr>
                         <tr>
                             <td>ABC Meds</td>
@@ -138,6 +140,7 @@
                             <td>City B</td>
                             <td>contact@abcmeds.com</td>
                             <td>Central Warehouse, North Warehouse</td>
+                            <td>2024-08-05</td>
                         </tr>
                         <tr>
                             <td>HealthPro Labs</td>
@@ -145,6 +148,7 @@
                             <td>City C</td>
                             <td>contact@healthpro.com</td>
                             <td>North Warehouse, South Warehouse</td>
+                            <td>2024-08-08</td>
                         </tr>
                     </tbody>
                 </table>
@@ -160,6 +164,8 @@
                             <th>Stored Drugs</th>
                             <th>Supplied By</th>
                             <th>Supplies To</th>
+                            <th>Supplied Date</th>
+                            <th>Received Date</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -168,18 +174,24 @@
                             <td>Drug A (XYZ Pharmaceuticals), Drug B (XYZ Pharmaceuticals), Drug D (ABC Meds)</td>
                             <td>XYZ Pharmaceuticals, ABC Meds</td>
                             <td>Vendor 1, Vendor 2</td>
+                            <td>2024-08-02</td>
+                            <td>2024-08-04</td>
                         </tr>
                         <tr>
                             <td>North Warehouse</td>
                             <td>Drug C (XYZ Pharmaceuticals), Drug E (ABC Meds), Drug F (HealthPro Labs)</td>
                             <td>XYZ Pharmaceuticals, ABC Meds, HealthPro Labs</td>
                             <td>Vendor 3, Vendor 4</td>
+                            <td>2024-08-06</td>
+                            <td>2024-08-08</td>
                         </tr>
                         <tr>
                             <td>South Warehouse</td>
                             <td>Drug G (HealthPro Labs), Drug H (HealthPro Labs)</td>
                             <td>HealthPro Labs</td>
                             <td>Vendor 2, Vendor 3</td>
+                            <td>2024-08-09</td>
+                            <td>2024-08-11</td>
                         </tr>
                     </tbody>
                 </table>
@@ -195,6 +207,8 @@
                             <th>Supplied Drugs</th>
                             <th>Supplied By (Warehouse)</th>
                             <th>Location</th>
+                            <th>Supplied Date</th>
+                            <th>Received Date</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -203,18 +217,24 @@
                             <td>Drug A (Central Warehouse), Drug B (Central Warehouse)</td>
                             <td>Central Warehouse</td>
                             <td>Vendor 1 Depot, City X</td>
+                            <td>2024-08-04</td>
+                            <td>2024-08-05</td>
                         </tr>
                         <tr>
                             <td>Vendor 2</td>
                             <td>Drug G (South Warehouse)</td>
                             <td>South Warehouse</td>
                             <td>Vendor 2 Depot, City Y</td>
+                            <td>2024-08-11</td>
+                            <td>2024-08-12</td>
                         </tr>
                         <tr>
                             <td>Vendor 3</td>
                             <td>Drug C (North Warehouse), Drug F (North Warehouse)</td>
                             <td>North Warehouse</td>
                             <td>Vendor 3 Depot, City Z</td>
+                            <td>2024-08-08</td>
+                            <td>2024-08-09</td>
                         </tr>
                     </tbody>
                 </table>
