--- a/login.html
+++ b/login.html
@@ -92,7 +92,7 @@
 <body>
     <div class="login-container">
         <h2>Login</h2>
-        <form action="backend.php" method="POST">
+        <form action="http://localhost:3000/login" method="POST"> <!-- Update the action URL to point to your Node.js server -->
 
             <div class="form-group">
                 <label for="username">Username:</label>
